src/test/rustdoc-ui/issue-61592.stderr
error[E0780]: inline with wildcard import
  --> $DIR/issue-61592.rs:5:7
   |
LL | #[doc(inline)]
   |       ^^^^^^
LL | pub use foo::Foo as _;
   | ---------------------- wildcard import

error: aborting due to previous error

For more information about this error, try `rustc --explain E0780`.
